--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,12 @@
 * {
     font-family: Arial, Helvetica, sans-serif;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
 
 body {
-    background-image: linear-gradient(69deg, rgb(179, 179, 179) 0 30%, rgb(80, 80, 80) 50% 100%);
+    background-color: darkgrey;
 }
 
 header {
@@ -11,6 +14,7 @@ header {
     opacity: .8;
     height: auto;
     width: 100%;
+    
 }
 
 nav {
@@ -26,12 +30,13 @@ nav {
     align-items: center;
     width: 100%;
     
+
 }
 
 .nav-item {
-    margin-right: 2rem; 
+    margin-right: 2rem;
 
-} 
+}
 
 .nav-item a {
     text-decoration: none;
@@ -46,9 +51,10 @@ nav {
 }
 
 section {
-    margin-top: 50px;
+    margin-top: 15px;
     width: 100%;
     display: flex;
+    position: relative;
     background-color: rgba(235, 232, 232, 0.678);
 }
 
@@ -58,24 +64,57 @@ section {
 }
 
 section h2 {
-    position:  relative;
-    top: 10%;
-    left: -25%;
     background-color: black;
     color: white;
-    height: 30px;
-    width: 25%;
+    position: absolute;
+    top: -1lh;
+    width: 100%;
+    padding-left: 1vw;
 
-   
 }
 
 section p {
-    width: 600px;
-    position: relative;
+    width: 100%;
     flex-wrap: wrap;
     justify-content: flex-start;
-    margin-left: -25%;
+    margin-left: 2vw;
+    margin-top: 2vw;
+    margin-bottom: 5vh;
+}
+
+.container {
+    display: flex;
+    flex-direction: row;
+    position: relative;
+    flex-wrap: wrap;
+    width: 100%;
+    border: solid black 5px;
+    justify-content: space-between;
     
+}
+
+.workhead  {
+    width: 100%;
+    height: auto;
+    background-color: black;
+    color: white;
+    padding-left: 1vw;
     
+}
+
+.card {
+    display: flex;
+    flex: 0 0 33%;
+    width: 33vw;
+    border: solid black 2px;
     
+}
+
+.card img {
+    width: 100%;
+    
+}
+
+.cardimg {
+    width: auto
 }
