--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,13 +7,14 @@
 }
 /*background color*/
 body {
-    background-color: rgb(51, 51, 51);
+    background-color: rgb(152, 191, 218);
 }
 /*Header color and size*/
 header {
-    background-color: rgb(141, 146, 154);
+    background-color: rgb(150, 165, 189);
     height: auto;
     width: 100%;
+    border-bottom: solid black 1px;
 
 
 }
@@ -33,7 +34,7 @@ nav {
 }
 /*Spacing for nav items*/
 .nav-item {
-    margin-right: 2rem;
+    margin-right: 1.5rem;
 
 }
 /*Hover effect for menu items*/
@@ -51,13 +52,18 @@ nav {
     margin-left: 1rem;
     font-weight: bolder;
 }
+.hero {
+    width: 100%;
+    height: 20vh;
+}
+
 /*Basic display settings for about section*/
 section {
     margin-top: 15px;
     width: 100%;
     display: flex;
     position: relative;
-    background-color: rgba(235, 232, 232, 0.678);
+    background-color: rgba(161, 178, 224, 0.678);
 }
 /*about image size*/
 .bio-image {
@@ -122,6 +128,7 @@ section a {
     height: 300px;
     width: 33vw;
     border: solid black 1px;
+    
 }
 /*Hover effect for first project*/
 .cardnew:hover {
@@ -144,6 +151,7 @@ section a {
     flex: 0 0 100%;
     width: 33vw;
     border: solid black 1px;
+    
 }
 /*Hover effects for remaining cards*/
 .card:hover {
@@ -172,17 +180,19 @@ section a {
     height: 60px;
     padding: 1rem 0;
     display: flex;
+    flex-direction: column;
     list-style: none;
-    align-items: center;
-    justify-content: space-evenly;
+    align-items: flex-start;
+    justify-content: center;
     width: 100%;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     font-weight: bold;
     color: black;
+    margin-left: 1vh;
 }
 /*Text color for contact section*/
 .contactli {
-    color: white;
+    color: rgb(0, 0, 0);
 }
 /*Hover effect for contact list items*/
 .contactli:hover {
@@ -192,10 +202,11 @@ section a {
 footer {
     display: flex;
     padding: 1vh;
-    justify-content: center;
+    justify-content: space-around;
     font-family: monospace;
-    font-size: 120%;
+    font-size: 100%;
     background-color: rgb(141, 146, 154);
+    border-top: solid black 3px;
 }
 
 /*size adjustments for cards when screen size is above 768px*/
@@ -203,10 +214,12 @@ footer {
     .card {
         flex: 0 0 50%;
     }
+    
 }
 /*size adjustments for cards when screen size is above 996px*/
 @media screen and (min-width: 996px) {
     .card {
         flex: 0 0 33%;
     }
+
 }
