--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,23 +5,25 @@
     margin: 0;
     padding: 0;
 }
+
 /*background color*/
 body {
     background-color: rgb(152, 191, 218);
 }
+
 /*Header color and size*/
 header {
     background-color: rgb(150, 165, 189);
     height: auto;
     width: 100%;
     border-bottom: solid black 1px;
-
-
 }
+
 /*Nav Width*/
 nav {
     width: 100%;
 }
+
 /*Nav list placement*/
 .nav-list {
     height: 60px;
@@ -32,26 +34,32 @@ nav {
     align-items: center;
     width: 100%;
 }
+
 /*Spacing for nav items*/
 .nav-item {
     margin-right: 1.5rem;
 
 }
+
 /*Hover effect for menu items*/
 .nav-item:hover {
     background-color: lightgray;
 }
+
 /*styling for menu links*/
 .nav-item a {
     text-decoration: none;
     color: black;
 }
+
 /*Position for website logo*/
 .nav-item:first-child {
     margin-right: auto;
     margin-left: 1rem;
     font-weight: bolder;
 }
+
+/*Background image*/
 .hero {
     width: 100%;
     height: 20vh;
@@ -65,11 +73,13 @@ section {
     position: relative;
     background-color: rgba(161, 178, 224, 0.678);
 }
+
 /*about image size*/
 .bio-image {
     width: 25%;
     height: 25%;
 }
+
 /*About section sub header*/
 section h2 {
     background-color: black;
@@ -79,6 +89,7 @@ section h2 {
     width: 100%;
     padding-left: 1vw;
 }
+
 /*About section text postion and margins*/
 section p {
     width: 100%;
@@ -88,6 +99,7 @@ section p {
     margin-top: 2vw;
     margin-bottom: 5vh;
 }
+
 /*About section link color*/
 section a {
     color: rgb(63, 63, 63);
@@ -101,6 +113,7 @@ section a {
     color: white;
     padding-left: 1vw;
 }
+
 /*Flex container for first project*/
 .container1 {
     display: flex;
@@ -128,17 +141,20 @@ section a {
     height: 300px;
     width: 33vw;
     border: solid black 1px;
-    
+
 }
+
 /*Hover effect for first project*/
 .cardnew:hover {
     filter: brightness(110%);
 }
+
 /*Flex and size for for first project image*/
 .workimage1 {
     flex: 0 0 100%;
     width: 100%;
 }
+
 /*Flex and size for for remaining project images*/
 .workimageall {
     flex: 0 0 100%;
@@ -146,17 +162,20 @@ section a {
     height: 20vh;
     position: relative;
 }
+
 /*Card sizing and border for remaining projects*/
 .card {
     flex: 0 0 100%;
     width: 33vw;
     border: solid black 1px;
-    
+
 }
+
 /*Hover effects for remaining cards*/
 .card:hover {
     filter: brightness(110%);
 }
+
 /*Titles for cards*/
 .cap {
     background-color: rgb(93, 123, 156);
@@ -169,12 +188,14 @@ section a {
 .cardimg {
     width: auto
 }
+
 /*Contact section sizing and display mode*/
 .contact {
     height: 10vh;
     display: flex;
     color: black;
 }
+
 /*Style and position of contact info*/
 .contactlist {
     height: 60px;
@@ -190,14 +211,17 @@ section a {
     color: black;
     margin-left: 1vh;
 }
+
 /*Text color for contact section*/
 .contactli {
     color: rgb(0, 0, 0);
 }
+
 /*Hover effect for contact list items*/
 .contactli:hover {
     color: rgb(88, 88, 88);
 }
+
 /*Footer settings*/
 footer {
     display: flex;
@@ -214,8 +238,9 @@ footer {
     .card {
         flex: 0 0 50%;
     }
-    
+
 }
+
 /*size adjustments for cards when screen size is above 996px*/
 @media screen and (min-width: 996px) {
     .card {
